fix missing color help

--- a/apps/fishing-map/pages/styles.css
+++ b/apps/fishing-map/pages/styles.css
@@ -3,6 +3,7 @@
 :root {
   --print-width: 17in;
   --print-height: 10in;
+  --color-help: #fff8cd;
 }
 
 .printing .print-hidden {
